# WikiWatcher_pathway-track

./: .replit  README.md  pyproject.toml  requirements.txt
attached_assets/: Pasted-You-are-a-world-class-Python-engineer-Create-a-new-Replit-project-named-wiki-watch-that-implement-1748177113751.txt
backend/: Procfile  optimized_backend.py  pipeline.py
config/: .env.template
wiki_watch/: Procfile.frontend  README.md  app.py  frontend.py  optimized_backend.py  simple_backend.py
wiki_watch/frontend/: frontend.py
