[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "fastapi>=0.115.12",
    "groq>=0.25.0",
    "pathway>=0.21.5",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.2",
]
